# rikkahub

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ZH_CN.md  README_ZH_TW.md  SPEC.md  anti-ai-generated.yml.prompt.yml  bash.exe.stackdump  build-release.bat  build.gradle.kts  capture-sync-logcat.bat  gradle.properties  local.properties.example  settings.gradle.kts  skills-lock.json
server/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260713_0001_phase1_users_devices.py  20260713_0002_phase2_sync_kernel.py  20260713_0003_phase4_assistants.py  20260713_0004_phase5_conversations.py  20260713_0005_phase5_conversation_folders.py  20260713_0006_phase6_message_nodes.py  20260713_0007_message_nodes_partial_unique.py  20260714_0008_phase65_memories_favorites.py  20260714_0009_phase7_files.py  20260715_0010_cloud_workspaces.py
server/deploy/: README.md
server/deploy/systemd/: perry-user.service.example  perry.service.example
server/scripts/: configure-workspaces.sh  install-perry.sh  perry  smoke-workspace-api.py  smoke-workspace-runtime.py  wipe-sync-data.sh
server/src/perry_server/: __init__.py  config.py  errors.py  logging_config.py  main.py
server/src/perry_server/api/: __init__.py  ai_proxy.py  catalog.py  (+7 more)
server/tests/: conftest.py  test_assistant_sync.py  test_conversation_sync.py  test_devices.py  test_files.py  test_folder_sync.py  test_health.py  test_memory_favorite_sync.py  test_message_node_sync.py  test_monel_facade.py  test_sync.py  test_tokens.py  test_workspaces.py
(+2982 files in other folders)
